--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-google-maps": "^6.0.1",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.3"
