--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-google-maps": "^6.0.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "recharts": "^0.21.2",
     "redux": "^3.6.0"
   },
   "devDependencies": {
